src/styles/pagination.scss
.ant-table-pagination.ant-pagination {
  --left-position-sider-open: 256px;
  --left-position-sider-collapsed: 80px;

  align-items: center;
  background-color: rgba(32, 32, 32, 0.95);
  border-top: 1px solid var(--theme-border-color);
  bottom: 0;
  display: flex;
  justify-content: flex-end;
  left: var(--left-position-sider-open);
  margin: 0;
  padding: 16px 50px 16px 40px;
  position: fixed;
  right: 0;

  .ant-pagination-total-text {
    color: var(--theme-light-text-color);
    font-size: 14px;
    font-weight: 500;
    height: auto;
    line-height: 1.2;
    margin-right: auto;
  }

  .ant-pagination-item-link {
    background: none;
    border: none;
    color: var(--theme-light-text-color);
    font-size: 14px;
    font-weight: 600;
    min-width: 0;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .ant-pagination-item {
    background: none;
    border: none;
    color: var(--theme-text-color);
    font-size: 14px;
    font-weight: 600;
    min-width: 0;

    &:last-child {
      margin-right: 0;
    }
  }

  .ant-pagination-item-active {
    a {
      color: var(--theme-color-3);
    }
  }
}

.ant-layout-sider-collapsed + .ant-layout .ant-table-pagination.ant-pagination {
  left: var(--left-position-sider-collapsed);
}

